--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "vue"
   ],
   "scripts": {
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "dev": "cross-env ts-node scripts/dev-start.ts",
     "build": "cross-env turbo build --filter=!@el-popover/demo",
     "lint": "eslint",
@@ -20,10 +22,16 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@types/jsdom": "^21.1.7",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue-jsx": "^4.1.0",
+    "@vitest/coverage-v8": "^2.1.5",
+    "@vitest/ui": "^2.1.5",
+    "@vue/test-utils": "^2.4.6",
     "cross-env": "^7.0.3",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
@@ -31,15 +39,18 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.31.0",
     "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "sass": "^1.81.0",
     "ts-node": "^10.9.2",
     "turbo": "^2.3.0",
     "typescript": "^5.6.3",
+    "unplugin-vue-macros": "^2.13.3",
     "vite": "^5.4.10",
     "vite-plugin-css-injected-by-js": "^3.5.2",
-    "vite-plugin-dts": "^4.3.0"
+    "vite-plugin-dts": "^4.3.0",
+    "vitest": "^2.1.5"
   },
   "lint-staged": {
     "{packages,apps}/**/*.{js,ts,tsx}": [
