--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,19 +1,11 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
-  "include": [
-    "**/vite.config.*",
-    "**/vitest.config.*",
-    "**/cypress.config.*",
-    "**/nightwatch.conf.*",
-    "**/playwright.config.*"
-  ],
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "noEmit": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"]
-  }
+    "lib": ["ESNext"],
+    "types": ["node"],
+    "skipLibCheck": true
+  },
+  "include": ["scripts/**/*", "packages/theme-chalk/**/*"],
+  "exclude": ["**/__tests__/**", "**/tests/**", "**/dist"]
 }
