--- a/packages/el-popover/package.json
+++ b/packages/el-popover/package.json
@@ -28,12 +28,10 @@
     "lint": "eslint",
     "preinstall": "npx only-allow pnpm"
   },
+  "dependencies": {},
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
-    "@vue/tsconfig": "^0.6.0",
     "vue-tsc": "^2.1.10"
   },
   "peerDependencies": {
@@ -46,6 +44,5 @@
   "files": [
     "dist",
     "package.json"
-  ],
-  "dependencies": {}
+  ]
 }
