--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -15,7 +15,7 @@
     "composite": true,
     "jsx": "preserve",
     "lib": ["ES2018", "DOM", "DOM.Iterable"],
-    "types": ["vue", "unplugin-vue-macros/macros-global"],
+    "types": ["unplugin-vue-macros/macros-global"],
     "skipLibCheck": true
   }
 }
