--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/js": "^9.15.0",
     "@types/jsdom": "^21.1.7",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.9.0",
