--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
-public-hoist-pattern[]=@vue/*
-public-hoist-pattern[]=vue
+hoist = true
+
+# public-hoist-pattern[]=@vue/*
+# public-hoist-pattern[]=vue
+# public-hoist-pattern[]=@vueuse/*
