--- a/packages/el-popover/package.json
+++ b/packages/el-popover/package.json
@@ -30,8 +30,11 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@el-popover/theme-chalk": "*",
+    "@floating-ui/dom": "^1.0.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vueuse/core": "^9.1.0",
     "vue-tsc": "^2.1.10"
   },
   "peerDependencies": {
