--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "sass": "^1.81.0",
     "ts-node": "^10.9.2",
     "turbo": "^2.3.0",
-    "typescript": "^5.6.3",
+    "typescript": "~5.5.0",
     "unplugin-vue-macros": "^2.13.3",
     "vite": "^5.4.11",
     "vite-plugin-css-injected-by-js": "^3.5.2",
