--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,8 +16,9 @@
     "rootDir": ".",
     "types": [],
     "paths": {
-      "@el-popover/*": ["packages/*"],
-      "el-popover": ["packages/el-popover/src/index.ts"]
+      "el-popover/*": ["packages/el-popover/src/*"],
+      "el-popover": ["packages/el-popover/src/index.ts"],
+      "@el-popover/*": ["packages/*"]
     },
     "preserveSymlinks": true
   }
