--- a/packages/el-popover/package.json
+++ b/packages/el-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hekeh/el-popover",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A popover component extracted from element-plus",
   "keywords": [
     "Element",
@@ -31,9 +31,11 @@
     "lint": "eslint",
     "preinstall": "npx only-allow pnpm"
   },
+  "dependencies": {
+    "@popperjs/core": "npm:@sxzz/popperjs-es@^2.11.7"
+  },
   "devDependencies": {
     "@el-popover/theme-chalk": "workspace:*",
-    "@popperjs/core": "npm:@sxzz/popperjs-es@^2.11.7",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vueuse/core": "^9.1.0",
