--- a/packages/el-popover/package.json
+++ b/packages/el-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hekeh/el-popover",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A popover component extracted from element-plus",
   "keywords": [
     "Element",
@@ -32,7 +32,7 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@popperjs/core": "npm:@sxzz/popperjs-es@^2.11.7"
+    "@popperjs/core": "^2.11.8"
   },
   "devDependencies": {
     "@el-popover/theme-chalk": "workspace:*",
