--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "rollup": "^4.28.1",
+    "rollup-plugin-dts": "^6.1.1",
     "sass": "^1.81.0",
     "ts-node": "^10.9.2",
     "turbo": "^2.3.0",
