--- a/packages/el-popover/package.json
+++ b/packages/el-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hekeh/el-popover",
-  "version": "0.1.6",
+  "version": "1.0.0",
   "description": "A popover component extracted from element-plus",
   "keywords": [
     "Element",
@@ -35,11 +35,10 @@
     "lint": "eslint",
     "preinstall": "npx only-allow pnpm"
   },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@el-popover/theme-chalk": "workspace:*",
+    "@popperjs/core": "^2.11.8",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vueuse/core": "^9.1.0",
