chore: optimize format

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "el-popover-workspace",
   "private": true,
-  "description": "A popover component extracted from element-plus",
   "packageManager": "pnpm@8.0.0",
+  "description": "A popover component extracted from element-plus",
   "repository": {
     "type": "git",
     "url": "https://github.com/HEKEH/el-popover"
@@ -14,6 +14,10 @@
     "popover",
     "tooltip"
   ],
+  "engines": {
+    "node": ">= 18",
+    "pnpm": ">= 8"
+  },
   "scripts": {
     "test": "vitest",
     "test:coverage": "vitest --coverage",
@@ -25,14 +29,13 @@
     "publish": "bash scripts/publish.sh"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.12.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.15.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
     "@vitejs/plugin-vue": "^5.2.0",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
     "@vitest/coverage-v8": "^2.1.5",
@@ -41,10 +44,7 @@
     "@vue/tsconfig": "^0.6.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.14.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.13.0",
     "husky": "^9.1.6",
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
@@ -61,18 +61,14 @@
     "vite-plugin-dts": "^4.3.0",
     "vitest": "^2.1.5"
   },
-  "lint-staged": {
-    "{packages,apps}/**/*.{js,ts,tsx}": [
-      "eslint --fix --color"
-    ]
-  },
-  "engines": {
-    "node": ">= 18",
-    "pnpm": ">= 8"
-  },
   "pnpm": {
     "patchedDependencies": {
       "@popperjs/core@2.11.8": "patches/@popperjs__core@2.11.8.patch"
     }
+  },
+  "lint-staged": {
+    "{packages,apps}/**/*.{js,ts,tsx}": [
+      "eslint --fix --color"
+    ]
   }
 }
