--- a/packages/el-popover/package.json
+++ b/packages/el-popover/package.json
@@ -2,6 +2,12 @@
   "name": "@hekeh/el-popover",
   "version": "1.0.2",
   "description": "A popover component extracted from element-plus",
+  "license": "MIT",
+  "homepage": "https://www.npmjs.com/package/@hekeh/el-popover",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HEKEH/el-popover"
+  },
   "keywords": [
     "Element",
     "Element Plus",
@@ -9,15 +15,6 @@
     "popover",
     "tooltip"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/HEKEH/el-popover"
-  },
-  "homepage": "https://www.npmjs.com/package/@hekeh/el-popover",
-  "license": "MIT",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -25,6 +22,15 @@
       "require": "./dist/index.cjs.js"
     }
   },
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "README.md",
+    "README.zh-cn.md",
+    "dist",
+    "package.json"
+  ],
   "scripts": {
     "check:types": "vue-tsc --declaration --noEmit -p tsconfig.build.json",
     "clean:temp-types": "rm -rf dist/temp-types",
@@ -36,6 +42,9 @@
     "lint": "eslint",
     "preinstall": "npx only-allow pnpm"
   },
+  "peerDependencies": {
+    "vue": "^3.0.0"
+  },
   "dependencies": {},
   "devDependencies": {
     "@el-popover/theme-chalk": "workspace:*",
@@ -45,18 +54,9 @@
     "@vueuse/core": "^9.1.0",
     "vue-tsc": "^2.1.10"
   },
-  "peerDependencies": {
-    "vue": "^3.0.0"
-  },
   "browserslist": [
     "> 1%",
     "not ie 11"
-  ],
-  "files": [
-    "dist",
-    "package.json",
-    "README.md",
-    "README.zh-cn.md"
   ],
   "publishConfig": {
     "access": "public"
