--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "files": [],
   "references": [
     { "path": "./tsconfig.web.json" },
     { "path": "./tsconfig.node.json" },
     { "path": "./tsconfig.vite-config.json" },
     { "path": "./tsconfig.vitest.json" }
-  ]
+  ],
+  "files": []
 }
